<resources>
    <string name="app_name">Demo-Bytes-Android</string>
    <string name="Bytes">Bytes</string>
    <string name="your_activity">Your activity</string>
    <string name="past_activity">Past activity</string>
    <string name="ready_to_connect">Ready to connect?</string>
    <string name="nice_wording">Some really nice wording</string>
    <string name="sell">Sell</string>
    <string name="connect">Connect</string>
    <string name="start_selling_now">Your connection is performing good, start selling now</string>
    <string name="we_found_hotspot">We found an Hotspot and connection is good!</string>
    <string name="activity">Activity</string>
    <string name="sell_down">Sell</string>
    <string name="connect_down">Connect</string>
    <string name="turn_on_hotspot">Turn on your hotspot</string>
    <string name="change_hotspot_address">Change your hotspot address</string>
    <string name="change_hotspot_address_to_default_address">Change your hotspot address to the default address</string>
    <string name="connected_to_server">Connected to the server</string>
    <string name="new_client_connected">New client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_of_client_failed">Connection of client failed</string>
    <string name="stop_selling">Stop selling</string>
    <string name="disconnect">disconnect</string>
    <string name="connection_of_server_closed">The connection of the server with a client has been closed</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_of_client_closed">The connection of the client is closed</string>
    <string name="connection_not_found">Wifi not found</string>
    <string name="connection_cannot_be_found">A Wifi cannot be found</string>
    <string name="bluetooth_problem">problem with Bluetooth</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet</string>
</resources>
